--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -281,6 +281,7 @@ let rd_vm = rd
 				rd.element(vm => document.createTextNode('scrolling ' + vm)),
 				start => renderAgain(rd_vm, vm => ({ ...vm, vscroll: { ...vm.vscroll, start, }, })),
 			)
+			.style({ width: '400px', })
 			.build()
 		),
 	)
