--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -265,7 +265,7 @@ let renderAgain = (renderer, f) => {
 
 let rd_vm = rd
 	.tag('span')
-	.style({ 'font-family': 'Verdana', })
+	.style({ 'font-family': 'sans-serif', })
 	.children(
 		rd.scope('message',
 			rd.tag('p').style({ 'font-weight': 'bold', }).text()
